# p21api

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  build.bat  build.ps1  cleanup_test_folders.ps1  config.py  conftest.py  env.sample  fetch_odata_metadata.py  main.py  mypy.ini  odata_schema_helper.py  p21_odata_client.py  parse_odata_metadata.py  pyproject.toml  pytest.ini  release.ps1  report_base.py  report_daily_sales.py  report_jarp.py  report_kennametal_pos.py  report_monthly_consolidation.py  report_monthly_invoices.py  report_open_orders.py  run.ps1  run_tests.py  test.ps1  test_improved_client.py
.github/: copilot-instructions.md
.github/copilot/: copilot-instructions.md
.github/prompts/: code-review.md  debugging.md
docs/: odata.md
gui/: __init__.py  gui.py
odata_schema/: odata_schema_summary.json  odata_schema_summary.md
output/: readme.txt
p21api/: async_runner.py  config.py  config_validator.py  container.py  environment_config.py  logging_config.py  odata_client.py  report_base.py  report_daily_sales.py  report_dead_inventory.py  report_grind_shop_open_orders.py  report_inventory.py  report_inventory_value.py  report_jarp.py  report_kennametal_pos.py  report_monthly_consolidation.py  report_monthly_invoices.py  report_open_orders.py  report_open_po.py  reports.py  utils.py
tests/: config_test.py  test_async_runner.py  test_chunking_integration.py  test_config.py  test_config_extended.py  test_config_password_strip.py  test_config_validator.py  test_container.py  test_environment_config.py  test_error_logging.py  test_gui.py  test_gui_coverage.py  test_gui_safe.py  test_integration.py  test_logging_config.py  test_main.py  test_odata_client.py  test_performance.py  test_report_base.py  test_reports.py  test_utils.py  test_utils_decorators.py
tests/reports/: README.md  __init__.py  test_report_daily_sales.py  test_report_dead_inventory.py  test_report_grind_shop_open_orders.py  test_report_integration.py  test_report_inventory.py  test_report_inventory_value.py  test_report_jarp.py  test_report_kennametal_pos.py  test_report_monthly_consolidation.py  test_report_monthly_invoices.py  test_report_open_orders.py  test_report_open_po.py
tests/test_p21api/: test_config.py
typings/PyQt6/: __init__.pyi
typings/PyQt6/QtCore/: __init__.pyi
typings/PyQt6/QtWidgets/: QDateEdit.pyi  QDialog.pyi  QHBoxLayout.pyi  QLayout.pyi  QLineEdit.pyi  QListWidgetItem.pyi  QPushButton.pyi  QVBoxLayout.pyi  __init__.pyi
typings/petl/: __init__.pyi
