[project]
name = "p21api"
version = "0.1.0"
description = ""
authors = [{ name = "tomt00001", email = "107521427+tomt00001@users.noreply.github.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "petl>=1.7.15,<2",
    "pyqt6>=6.7.1,<7",
    "pydantic>=2.10.6,<3",
    "pydantic-settings>=2.7.1,<3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13,<0.14",
    "ipython>=8.27.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["./p21api", "./gui", "./reports", "./config", "./client"]
line-length = 88
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*migrations*",
]

[tool.ruff.lint]
# Pyflakes, Pycodestyle, and isort
select = ["E", "F", "I", "T"]
# maybe need "E129"
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
per-file-ignores = {}

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.bandit]
# Exclude test files from security scanning
exclude_dirs = ["tests"]
# Skip certain security checks that may be false positives
skips = ["B101"]  # Skip "Test for use of assert" in non-test files
